index.css
.rubik-fonts {
    font-family: "Rubik", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

.quint {
    transition: all 500ms cubic-bezier(0.860, 0.000, 0.070, 1.000);
    /* easeInOutQuint */
}

body {
    user-select: none;
}

.age {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1);
    width: 250px;
    height: 250px;
    display: flex;
    overflow: hidden;
    font-weight: 300;
    animation: zoom-out 1.5s 1s cubic-bezier(0.860, 0.000, 0.070, 1.000) forwards;
}

.age p {
    margin: 0;
    padding: 0;
    font-size: 10em;
    text-align: center;
    line-height: 250px;
    position: absolute;
}

.ageL {
    width: 50%;
    left: 5%;
    animation: hue 5s 1s linear infinite, turn_color 1.5s 1s linear forwards;
}

.ageR {
    width: 50%;
    left: 38%;
    animation: move_up 1.5s 1s cubic-bezier(0.860, 0.000, 0.070, 1.000) forwards, hue 5s 1s linear infinite;
}

.hpbd {
    position: absolute;
    top: -20%;
    left: 50%;
    font-size: 1.5em;
    text-align: center;
    transform: translateX(-50%);
    animation: down 2s 2s forwards cubic-bezier(0.230, 1.000, 0.320, 1.000);
}

.hpbdsub {
    position: absolute;
    top: 120%;
    left: 50%;
    font-size: 1.5em;
    text-align: center;
    transform: translateX(-50%);
    animation: up 2s 2s forwards cubic-bezier(0.230, 1.000, 0.320, 1.000);
}

.hueanim {
    color: red;
    animation: hue 5s 1s linear infinite;
}

/* Keyframes */

@keyframes down {
    to {
        top: 10%;
    }
}

@keyframes up {
    to {
        top: 80%;
    }
}

@keyframes zoom-out {
    to {
        transform: scale(0.6) translate(-84%, -84%);
    }
}

@keyframes move_up {
    to {
        transform: translateY(-250px);
        color: red;
    }
}

@keyframes turn_color {
    to {
        color: red;
    }
}

@keyframes hue {
    to {
        filter: hue-rotate(360deg);
    }
}

